# shades-of-rust

./: .gitignore  README.md
makepad-preserve-me/: README_SHADES.md
makepad-preserve-me/draw_2d/src/shader/: draw_text.rs
makepad-preserve-me/examples/ironfish/src/: main.rs
makepad-preserve-me/platform/src/os/web_browser/: web_browser.js
makepad-preserve-me/widgets/src/: check_box.rs
makepad/widgets/src/: theme.rs
post/: index.html
shades-bracket-lib/: README.md
shades-bracket-lib/book/: index.html
shades-bracket-lib/chapter-75-darkplaza/: Cargo.toml
shades-dioxus/: Cargo.toml  index.html
shades-dioxus/src/: main.rs
shades-egui/: Cargo.toml  index.html
shades-egui/.github/workflows/: pages.yml
shades-egui/assets/: sw.js
shades-egui/src/: app.rs  main.rs
shades-flb/: README.md  pubspec.yaml
shades-iced/: Cargo.toml  README.md  index.html.bkp
shades-iced/src/: main.rs
shades-kas/: Cargo.toml
shades-kas/src/: main.rs
shades-leptos/: Cargo.toml  index.html
shades-leptos/src/: api.rs  lib.rs  main.rs
shades-makepad/: README.md  index.html  makepad-example-ironfish.wasm  nginx.conf.sigil
shades-makepad/makepad/: README.md
shades-moonzoon/: Cargo.toml  README.md
shades-moonzoon/frontend/src/: main.rs
shades-perseus/: Cargo.toml  README.md
shades-perseus/src/: main.rs
shades-perseus/src/templates/: about.rs  index.rs  mod.rs
shades-relm4/: Cargo.toml
shades-relm4/src/: main.rs
shades-rust-dominator/: .buildpacks  .gitignore  README.md
shades-sauron/: Cargo.toml  README.md
shades-sauron/src/: index.html  lib.rs
shades-silkenweb/: Cargo.toml  README.md  index.html
shades-silkenweb/src/: main.rs
shades-slint/: Cargo.toml  README.md  index.html
shades-slint/src/: main.rs
shades-sycamore/: Cargo.toml  index.html
shades-sycamore/src/: main.rs
shades-tauri/: index.html  package.json
shades-tauri-sycamore/: README.md
shades-tauri-yew/: Cargo.toml
shades-tauri-yew/src-tauri/: Cargo.toml  tauri.conf.json
shades-tauri/src/: style.css
shades-tauri/src-tauri/: Cargo.toml  tauri.conf.json
shades-vizia/: Cargo.toml
shades-vizia/src/: main.rs
shades-xilem/: Cargo.toml  README.md
shades-xilem/src/: main.rs
shades-yew/: Cargo.toml
shades-yew/src/: main.rs
