[workspace]
members = [
    "frontend",
    "backend",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
