[workspace]
members = [
    "frontend",
    "backend",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "ccc15d043e78a6656d68a60d46de1f540724e093" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", ref = "ccc15d043e78a6656d68a60d46de1f540724e093" }
